isabelle_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALTSTRING
    ASSUME
    HAVE
    LATIN
    LETTER
    LONG_IDENT
    OUTER_COMMENT
    SHORT_IDENT
    SHOW
    STRING
    SUBSCRIPT
    SYM_FLOAT
    SYM_IDENT
    TERM_VAR
    THEN
    TYPE_IDENT
    TYPE_VAR
    VERBATIM

Grammar

Rule 0     S' -> theory_file
Rule 1     theory_file -> theory
Rule 2     theory_file -> section_block theory_file
Rule 3     theory_file -> text_block theory_file
Rule 4     theory -> THEORY ID imports_opt BEGIN content END
Rule 5     imports_opt -> IMPORTS import_list
Rule 6     imports_opt -> empty
Rule 7     import_list -> ID import_list
Rule 8     import_list -> QUOTED_STRING import_list
Rule 9     import_list -> ID
Rule 10    content -> statement content
Rule 11    content -> empty
Rule 12    statement -> axiomatization_block
Rule 13    statement -> fun_block
Rule 14    statement -> lemma_block
Rule 15    statement -> locale_block
Rule 16    statement -> method_block
Rule 17    statement -> section_block
Rule 18    statement -> text_block
Rule 19    statement -> type_synonym
Rule 20    statement -> typedecl
Rule 21    method_block -> METHOD method_name EQUALS instruction
Rule 22    method_name -> ID
Rule 23    instruction -> single_instruction
Rule 24    instruction -> single_instruction instruction_modifier
Rule 25    instruction -> single_instruction instruction_modifier COMMA instruction
Rule 26    instruction -> single_instruction SEMICOLON instruction
Rule 27    instruction -> single_instruction COMMA instruction
Rule 28    instruction -> LEFT_PAREN instruction RIGHT_PAREN
Rule 29    instruction -> LEFT_PAREN instruction RIGHT_PAREN instruction_modifier
Rule 30    instruction_modifier -> PLUS
Rule 31    instruction_modifier -> QUESTION_MARK
Rule 32    single_instruction -> ID
Rule 33    single_instruction -> ID method_args
Rule 34    single_instruction -> LEFT_PAREN ID method_args RIGHT_PAREN
Rule 35    single_instruction -> LEFT_PAREN ID method_args RIGHT_PAREN instruction_modifier
Rule 36    method_args -> ID COLON method_arg method_args
Rule 37    method_args -> method_arg method_args
Rule 38    method_args -> empty
Rule 39    method_arg -> ID
Rule 40    method_arg -> ID LEFT_PAREN NAT RIGHT_PAREN
Rule 41    method_arg -> ID DOT ID
Rule 42    method_arg -> ID DOT ID LEFT_PAREN NAT RIGHT_PAREN
Rule 43    method_arg -> QUOTED_STRING
Rule 44    lemma_block -> LEMMA ID COLON assumes_block shows_clause lemma_proof_block
Rule 45    lemma_proof_block -> PROOF apply_block
Rule 46    lemma_proof_block -> apply_block
Rule 47    lemma_proof_block -> empty
Rule 48    assumes_block -> ASSUMES assumptions_list
Rule 49    assumptions_list -> assumption AND assumptions_list
Rule 50    assumptions_list -> assumption
Rule 51    assumption -> QUOTED_STRING
Rule 52    assumption -> NAT COLON QUOTED_STRING
Rule 53    shows_clause -> SHOWS QUOTED_STRING
Rule 54    apply_block -> single_apply apply_block
Rule 55    apply_block -> subgoal apply_block
Rule 56    apply_block -> empty
Rule 57    single_apply -> APPLY instruction
Rule 58    single_apply -> APPLY LEFT_PAREN instruction RIGHT_PAREN
Rule 59    single_apply -> USING using_block APPLY DASH
Rule 60    single_apply -> USING using_block APPLY instruction
Rule 61    single_apply -> USING using_block APPLY LEFT_PAREN instruction RIGHT_PAREN
Rule 62    single_apply -> BY instruction
Rule 63    single_apply -> BY LEFT_PAREN instruction RIGHT_PAREN
Rule 64    single_apply -> USING using_block BY instruction
Rule 65    single_apply -> USING using_block BY LEFT_PAREN instruction RIGHT_PAREN
Rule 66    single_apply -> DONE
Rule 67    single_apply -> SORRY
Rule 68    using_block -> ASSMS using_block
Rule 69    using_block -> ASSMS LEFT_PAREN NAT RIGHT_PAREN using_block
Rule 70    using_block -> ASSMS LEFT_PAREN NAT COMMA NAT RIGHT_PAREN using_block
Rule 71    using_block -> ASSMS LEFT_PAREN NAT DASH NAT RIGHT_PAREN using_block
Rule 72    using_block -> empty
Rule 73    subgoals -> subgoal subgoals
Rule 74    subgoals -> subgoal
Rule 75    subgoal -> SUBGOAL QUOTED_STRING apply_block
Rule 76    typespec -> ID
Rule 77    typespec -> typeargs ID
Rule 78    typearg -> ID
Rule 79    typearg -> ID COLON COLON ID
Rule 80    typeargs -> typearg
Rule 81    typeargs -> typearg COMMA typeargs
Rule 82    typeargs -> LEFT_PAREN typeargs RIGHT_PAREN
Rule 83    vars -> var
Rule 84    vars -> var AND vars
Rule 85    var -> names
Rule 86    var -> ID COLON COLON ID
Rule 87    var -> GREEK COLON COLON ID
Rule 88    var -> ID COLON COLON QUOTED_STRING
Rule 89    var -> GREEK COLON COLON QUOTED_STRING
Rule 90    var -> names COLON COLON ID
Rule 91    var -> names COLON COLON QUOTED_STRING
Rule 92    var -> ID mixfix
Rule 93    var -> ID COLON COLON ID mixfix
Rule 94    var -> GREEK COLON COLON ID mixfix
Rule 95    var -> ID COLON COLON QUOTED_STRING mixfix
Rule 96    var -> GREEK COLON COLON QUOTED_STRING mixfix
Rule 97    names -> ID
Rule 98    names -> ID AND names
Rule 99    names_list -> ID
Rule 100   names_list -> ID names
Rule 101   prop_pat -> LEFT_PAREN prop_pat_terms RIGHT_PAREN
Rule 102   prop_pat_terms -> prop_pat_term
Rule 103   prop_pat_terms -> prop_pat_term prop_pat_terms
Rule 104   prop_pat_term -> IS ID
Rule 105   prop_pat_term -> IS QUOTED_STRING
Rule 106   thmdecl -> thmbind COLON
Rule 107   thmdef -> thmbind EQ
Rule 108   thm -> ID attributes
Rule 109   thm -> ID
Rule 110   thm -> attributes
Rule 111   thms -> thm
Rule 112   thms -> thm thms
Rule 113   thmbind -> ID
Rule 114   thmbind -> ID attributes
Rule 115   thmbind -> attributes
Rule 116   attributes -> LEFT_BRACKET attributes_list RIGHT_BRACKET
Rule 117   attributes_list -> empty
Rule 118   attributes_list -> attribute
Rule 119   attributes_list -> attribute COMMA attributes_list
Rule 120   attribute -> ID args
Rule 121   args -> empty
Rule 122   args -> arg
Rule 123   args -> arg args
Rule 124   arg -> ID
Rule 125   arg -> LEFT_PAREN args RIGHT_PAREN
Rule 126   arg -> LEFT_BRACKET args RIGHT_BRACKET
Rule 127   for_fixes -> empty
Rule 128   for_fixes -> FOR vars
Rule 129   multi_specs -> structured_spec
Rule 130   multi_specs -> structured_spec multi_specs
Rule 131   structured_spec -> ID spec_prems for_fixes
Rule 132   structured_spec -> QUOTED_STRING spec_prems for_fixes
Rule 133   structured_spec -> thmdecl ID spec_prems for_fixes
Rule 134   structured_spec -> thmdecl QUOTED_STRING spec_prems for_fixes
Rule 135   spec_prems -> empty
Rule 136   spec_prems -> IF prop_list
Rule 137   prop_list -> ID
Rule 138   prop_list -> ID prop_list
Rule 139   prop_list -> ID AND prop_list
Rule 140   specification -> vars WHERE multi_specs
Rule 141   opening -> OPENING names_list
Rule 142   axiomatization_block -> AXIOMATIZATION
Rule 143   axiomatization_block -> AXIOMATIZATION vars
Rule 144   axiomatization_block -> AXIOMATIZATION WHERE axiomatization
Rule 145   axiomatization_block -> AXIOMATIZATION vars WHERE axiomatization
Rule 146   axiomatization -> axiomatization_header spec_prems for_fixes
Rule 147   axiomatization_header -> thmdecl ID
Rule 148   axiomatization_header -> thmdecl QUOTED_STRING
Rule 149   axiomatization_header -> thmdecl ID AND axiomatization_header
Rule 150   axiomatization_header -> thmdecl QUOTED_STRING AND axiomatization_header
Rule 151   locale_expr -> instance_list for_fixes
Rule 152   instance_list -> instance
Rule 153   instance_list -> instance PLUS instance_list
Rule 154   instance -> ID
Rule 155   instance -> ID pos_insts
Rule 156   instance -> ID name_insts
Rule 157   instance -> qualifier COLON ID pos_insts
Rule 158   instance -> qualifier COLON ID name_insts
Rule 159   qualifier -> ID
Rule 160   qualifier -> QUOTED_STRING
Rule 161   qualifier -> ID QUESTION_MARK
Rule 162   qualifier -> QUOTED_STRING QUESTION_MARK
Rule 163   pos_insts -> UNDERSCORE
Rule 164   pos_insts -> ID
Rule 165   pos_insts -> QUOTED_STRING
Rule 166   pos_insts -> UNDERSCORE pos_insts
Rule 167   pos_insts -> ID pos_insts
Rule 168   pos_insts -> QUOTED_STRING pos_insts
Rule 169   name_insts -> WHERE name_insts_list
Rule 170   name_insts_list -> ID EQUALS ID
Rule 171   name_insts_list -> ID EQUALS QUOTED_STRING
Rule 172   name_insts_list -> ID EQUALS ID name_insts_list
Rule 173   name_insts_list -> ID EQUALS QUOTED_STRING name_insts_list
Rule 174   locale_block -> LOCALE ID
Rule 175   locale_block -> LOCALE ID BEGIN content END
Rule 176   locale_block -> LOCALE ID comment_block BEGIN content END
Rule 177   locale_block -> LOCALE ID EQ locale
Rule 178   locale_block -> LOCALE ID EQ locale BEGIN content END
Rule 179   locale -> context_elem_list
Rule 180   locale -> opening
Rule 181   locale -> opening PLUS context_elem_list
Rule 182   locale -> locale_expr
Rule 183   locale -> locale opening
Rule 184   locale -> locale opening PLUS context_elem_list
Rule 185   locale -> locale_expr opening PLUS context_elem_list
Rule 186   context_elem_list -> context_elem
Rule 187   context_elem_list -> context_elem context_elem_list
Rule 188   context_elem -> FIXES vars
Rule 189   context_elem -> CONSTRAINS name_type_list
Rule 190   context_elem -> ASSUMES prop_list
Rule 191   context_elem -> DEFINES defines_list
Rule 192   context_elem -> NOTES notes_list
Rule 193   name_type_list -> ID COLON COLON ID
Rule 194   name_type_list -> ID COLON COLON ID AND name_type_list
Rule 195   defines_list -> defines_list_element
Rule 196   defines_list -> defines_list_element AND defines_list
Rule 197   defines_list_element -> ID
Rule 198   defines_list_element -> QUOTED_STRING
Rule 199   defines_list_element -> thmdecl ID
Rule 200   defines_list_element -> thmdecl QUOTED_STRING
Rule 201   defines_list_element -> ID prop_pat
Rule 202   defines_list_element -> QUOTED_STRING prop_pat
Rule 203   defines_list_element -> thmdecl ID prop_pat
Rule 204   defines_list_element -> thmdecl QUOTED_STRING prop_pat
Rule 205   notes_list -> notes_list_element
Rule 206   notes_list -> notes_list_element AND notes_list
Rule 207   notes_list_element -> thmdef thms
Rule 208   notes_list_element -> thms
Rule 209   typedecl -> TYPEDECL typespec
Rule 210   typedecl -> TYPEDECL typespec mixfix
Rule 211   type_synonym -> TYPE_SYNONYM typespec EQUALS ID
Rule 212   type_synonym -> TYPE_SYNONYM typespec EQUALS ID mixfix
Rule 213   mixfix -> LEFT_PAREN template RIGHT_PAREN
Rule 214   mixfix -> LEFT_PAREN template prios RIGHT_PAREN
Rule 215   mixfix -> LEFT_PAREN template NAT RIGHT_PAREN
Rule 216   mixfix -> LEFT_PAREN template prios NAT RIGHT_PAREN
Rule 217   mixfix -> LEFT_PAREN INFIX template NAT RIGHT_PAREN
Rule 218   mixfix -> LEFT_PAREN INFIXL template NAT RIGHT_PAREN
Rule 219   mixfix -> LEFT_PAREN INFIXR template NAT RIGHT_PAREN
Rule 220   mixfix -> BINDER template NAT RIGHT_PAREN
Rule 221   mixfix -> BINDER template prio NAT RIGHT_PAREN
Rule 222   mixfix -> STRUCTURE
Rule 223   template -> QUOTED_STRING
Rule 224   template -> CARTOUCHE
Rule 225   prios -> LEFT_BRACKET nat_list RIGHT_BRACKET
Rule 226   prio -> LEFT_BRACKET NAT RIGHT_BRACKET
Rule 227   nat_list -> NAT
Rule 228   nat_list -> NAT COMMA nat_list
Rule 229   primrec_block -> PRIMREC specification
Rule 230   fun_block -> FUN specification
Rule 231   fun_block -> FUNCTION specification
Rule 232   fun_block -> FUN opts specification
Rule 233   fun_block -> FUNCTION opts specification
Rule 234   opts -> LEFT_PAREN opt_list RIGHT_PAREN
Rule 235   opt_list -> sequential
Rule 236   opt_list -> domintros
Rule 237   opt_list -> sequential COMMA opt_list
Rule 238   opt_list -> domintros COMMA opt_list
Rule 239   sequential -> ID
Rule 240   sequential -> QUOTED_STRING
Rule 241   domintros -> ID
Rule 242   domintros -> QUOTED_STRING
Rule 243   section_block -> SECTION CARTOUCHE
Rule 244   text_block -> TEXT CARTOUCHE
Rule 245   comment_block -> COMMENT_CARTOUCHE CARTOUCHE
Rule 246   symbol -> BANG
Rule 247   symbol -> STAR
Rule 248   symbol -> BACKSLASH
Rule 249   symbol -> LT
Rule 250   symbol -> HAT
Rule 251   symbol -> GT
Rule 252   symbol -> PLUS
Rule 253   empty -> <empty>

Terminals, with rules where they appear

ALTSTRING            : 
AND                  : 49 84 98 139 149 150 194 196 206
APPLY                : 57 58 59 60 61
ASSMS                : 68 69 70 71
ASSUME               : 
ASSUMES              : 48 190
AXIOMATIZATION       : 142 143 144 145
BACKSLASH            : 248
BANG                 : 246
BEGIN                : 4 175 176 178
BINDER               : 220 221
BY                   : 62 63 64 65
CARTOUCHE            : 224 243 244 245
COLON                : 36 44 52 79 79 86 86 87 87 88 88 89 89 90 90 91 91 93 93 94 94 95 95 96 96 106 157 158 193 193 194 194
COMMA                : 25 27 70 81 119 228 237 238
COMMENT_CARTOUCHE    : 245
CONSTRAINS           : 189
DASH                 : 59 71
DEFINES              : 191
DONE                 : 66
DOT                  : 41 42
END                  : 4 175 176 178
EQ                   : 107 177 178
EQUALS               : 21 170 171 172 173 211 212
FIXES                : 188
FOR                  : 128
FUN                  : 230 232
FUNCTION             : 231 233
GREEK                : 87 89 94 96
GT                   : 251
HAT                  : 250
HAVE                 : 
ID                   : 4 7 9 22 32 33 34 35 36 39 40 41 41 42 42 44 76 77 78 79 79 86 86 87 88 90 92 93 93 94 95 97 98 99 100 104 108 109 113 114 120 124 131 133 137 138 139 147 149 154 155 156 157 158 159 161 164 167 170 170 171 172 172 173 174 175 176 177 178 193 193 194 194 197 199 201 203 211 212 239 241
IF                   : 136
IMPORTS              : 5
INFIX                : 217
INFIXL               : 218
INFIXR               : 219
IS                   : 104 105
LATIN                : 
LEFT_BRACKET         : 116 126 225 226
LEFT_PAREN           : 28 29 34 35 40 42 58 61 63 65 69 70 71 82 101 125 213 214 215 216 217 218 219 234
LEMMA                : 44
LETTER               : 
LOCALE               : 174 175 176 177 178
LONG_IDENT           : 
LT                   : 249
METHOD               : 21
NAT                  : 40 42 52 69 70 70 71 71 215 216 217 218 219 220 221 226 227 228
NOTES                : 192
OPENING              : 141
OUTER_COMMENT        : 
PLUS                 : 30 153 181 184 185 252
PRIMREC              : 229
PROOF                : 45
QUESTION_MARK        : 31 161 162
QUOTED_STRING        : 8 43 51 52 53 75 88 89 91 95 96 105 132 134 148 150 160 162 165 168 171 173 198 200 202 204 223 240 242
RIGHT_BRACKET        : 116 126 225 226
RIGHT_PAREN          : 28 29 34 35 40 42 58 61 63 65 69 70 71 82 101 125 213 214 215 216 217 218 219 220 221 234
SECTION              : 243
SEMICOLON            : 26
SHORT_IDENT          : 
SHOW                 : 
SHOWS                : 53
SORRY                : 67
STAR                 : 247
STRING               : 
STRUCTURE            : 222
SUBGOAL              : 75
SUBSCRIPT            : 
SYM_FLOAT            : 
SYM_IDENT            : 
TERM_VAR             : 
TEXT                 : 244
THEN                 : 
THEORY               : 4
TYPEDECL             : 209 210
TYPE_IDENT           : 
TYPE_SYNONYM         : 211 212
TYPE_VAR             : 
UNDERSCORE           : 163 166
USING                : 59 60 61 64 65
VERBATIM             : 
WHERE                : 140 144 145 169
error                : 

Nonterminals, with rules where they appear

apply_block          : 45 46 54 55 75
arg                  : 122 123
args                 : 120 123 125 126
assumes_block        : 44
assumption           : 49 50
assumptions_list     : 48 49
attribute            : 118 119
attributes           : 108 110 114 115
attributes_list      : 116 119
axiomatization       : 144 145
axiomatization_block : 12
axiomatization_header : 146 149 150
comment_block        : 176
content              : 4 10 175 176 178
context_elem         : 186 187
context_elem_list    : 179 181 184 185 187
defines_list         : 191 196
defines_list_element : 195 196
domintros            : 236 238
empty                : 6 11 38 47 56 72 117 121 127 135
for_fixes            : 131 132 133 134 146 151
fun_block            : 13
import_list          : 5 7 8
imports_opt          : 4
instance             : 152 153
instance_list        : 151 153
instruction          : 21 25 26 27 28 29 57 58 60 61 62 63 64 65
instruction_modifier : 24 25 29 35
lemma_block          : 14
lemma_proof_block    : 44
locale               : 177 178 183 184
locale_block         : 15
locale_expr          : 182 185
method_arg           : 36 37
method_args          : 33 34 35 36 37
method_block         : 16
method_name          : 21
mixfix               : 92 93 94 95 96 210 212
multi_specs          : 130 140
name_insts           : 156 158
name_insts_list      : 169 172 173
name_type_list       : 189 194
names                : 85 90 91 98 100
names_list           : 141
nat_list             : 225 228
notes_list           : 192 206
notes_list_element   : 205 206
opening              : 180 181 183 184 185
opt_list             : 234 237 238
opts                 : 232 233
pos_insts            : 155 157 166 167 168
primrec_block        : 
prio                 : 221
prios                : 214 216
prop_list            : 136 138 139 190
prop_pat             : 201 202 203 204
prop_pat_term        : 102 103
prop_pat_terms       : 101 103
qualifier            : 157 158
section_block        : 2 17
sequential           : 235 237
shows_clause         : 44
single_apply         : 54
single_instruction   : 23 24 25 26 27
spec_prems           : 131 132 133 134 146
specification        : 229 230 231 232 233
statement            : 10
structured_spec      : 129 130
subgoal              : 55 73 74
subgoals             : 73
symbol               : 
template             : 213 214 215 216 217 218 219 220 221
text_block           : 3 18
theory               : 1
theory_file          : 2 3 0
thm                  : 111 112
thmbind              : 106 107
thmdecl              : 133 134 147 148 149 150 199 200 203 204
thmdef               : 207
thms                 : 112 207 208
type_synonym         : 19
typearg              : 80 81
typeargs             : 77 81 82
typedecl             : 20
typespec             : 209 210 211 212
using_block          : 59 60 61 64 65 68 69 70 71
var                  : 83 84
vars                 : 84 128 140 143 145 188

Parsing method: LALR

state 0

    (0) S' -> . theory_file
    (1) theory_file -> . theory
    (2) theory_file -> . section_block theory_file
    (3) theory_file -> . text_block theory_file
    (4) theory -> . THEORY ID imports_opt BEGIN content END
    (243) section_block -> . SECTION CARTOUCHE
    (244) text_block -> . TEXT CARTOUCHE

    THEORY          shift and go to state 5
    SECTION         shift and go to state 6
    TEXT            shift and go to state 7

    theory_file                    shift and go to state 1
    theory                         shift and go to state 2
    section_block                  shift and go to state 3
    text_block                     shift and go to state 4

state 1

    (0) S' -> theory_file .



state 2

    (1) theory_file -> theory .

    $end            reduce using rule 1 (theory_file -> theory .)


state 3

    (2) theory_file -> section_block . theory_file
    (1) theory_file -> . theory
    (2) theory_file -> . section_block theory_file
    (3) theory_file -> . text_block theory_file
    (4) theory -> . THEORY ID imports_opt BEGIN content END
    (243) section_block -> . SECTION CARTOUCHE
    (244) text_block -> . TEXT CARTOUCHE

    THEORY          shift and go to state 5
    SECTION         shift and go to state 6
    TEXT            shift and go to state 7

    section_block                  shift and go to state 3
    theory_file                    shift and go to state 8
    theory                         shift and go to state 2
    text_block                     shift and go to state 4

state 4

    (3) theory_file -> text_block . theory_file
    (1) theory_file -> . theory
    (2) theory_file -> . section_block theory_file
    (3) theory_file -> . text_block theory_file
    (4) theory -> . THEORY ID imports_opt BEGIN content END
    (243) section_block -> . SECTION CARTOUCHE
    (244) text_block -> . TEXT CARTOUCHE

    THEORY          shift and go to state 5
    SECTION         shift and go to state 6
    TEXT            shift and go to state 7

    text_block                     shift and go to state 4
    theory_file                    shift and go to state 9
    theory                         shift and go to state 2
    section_block                  shift and go to state 3

state 5

    (4) theory -> THEORY . ID imports_opt BEGIN content END

    ID              shift and go to state 10


state 6

    (243) section_block -> SECTION . CARTOUCHE

    CARTOUCHE       shift and go to state 11


state 7

    (244) text_block -> TEXT . CARTOUCHE

    CARTOUCHE       shift and go to state 12


state 8

    (2) theory_file -> section_block theory_file .

    $end            reduce using rule 2 (theory_file -> section_block theory_file .)


state 9

    (3) theory_file -> text_block theory_file .

    $end            reduce using rule 3 (theory_file -> text_block theory_file .)


state 10

    (4) theory -> THEORY ID . imports_opt BEGIN content END
    (5) imports_opt -> . IMPORTS import_list
    (6) imports_opt -> . empty
    (253) empty -> .

    IMPORTS         shift and go to state 14
    BEGIN           reduce using rule 253 (empty -> .)

    imports_opt                    shift and go to state 13
    empty                          shift and go to state 15

state 11

    (243) section_block -> SECTION CARTOUCHE .

    THEORY          reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    SECTION         reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    TEXT            reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    AXIOMATIZATION  reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    FUN             reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    FUNCTION        reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    LEMMA           reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    LOCALE          reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    METHOD          reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    TYPE_SYNONYM    reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    TYPEDECL        reduce using rule 243 (section_block -> SECTION CARTOUCHE .)
    END             reduce using rule 243 (section_block -> SECTION CARTOUCHE .)


state 12

    (244) text_block -> TEXT CARTOUCHE .

    THEORY          reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    SECTION         reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    TEXT            reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    AXIOMATIZATION  reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    FUN             reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    FUNCTION        reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    LEMMA           reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    LOCALE          reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    METHOD          reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    TYPE_SYNONYM    reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    TYPEDECL        reduce using rule 244 (text_block -> TEXT CARTOUCHE .)
    END             reduce using rule 244 (text_block -> TEXT CARTOUCHE .)


state 13

    (4) theory -> THEORY ID imports_opt . BEGIN content END

    BEGIN           shift and go to state 16


state 14

    (5) imports_opt -> IMPORTS . import_list
    (7) import_list -> . ID import_list
    (8) import_list -> . QUOTED_STRING import_list
    (9) import_list -> . ID

    ID              shift and go to state 18
    QUOTED_STRING   shift and go to state 19

    import_list                    shift and go to state 17

state 15

    (6) imports_opt -> empty .

    BEGIN           reduce using rule 6 (imports_opt -> empty .)


state 16

    (4) theory -> THEORY ID imports_opt BEGIN . content END
    (10) content -> . statement content
    (11) content -> . empty
    (12) statement -> . axiomatization_block
    (13) statement -> . fun_block
    (14) statement -> . lemma_block
    (15) statement -> . locale_block
    (16) statement -> . method_block
    (17) statement -> . section_block
    (18) statement -> . text_block
    (19) statement -> . type_synonym
    (20) statement -> . typedecl
    (253) empty -> .
    (142) axiomatization_block -> . AXIOMATIZATION
    (143) axiomatization_block -> . AXIOMATIZATION vars
    (144) axiomatization_block -> . AXIOMATIZATION WHERE axiomatization
    (145) axiomatization_block -> . AXIOMATIZATION vars WHERE axiomatization
    (230) fun_block -> . FUN specification
    (231) fun_block -> . FUNCTION specification
    (232) fun_block -> . FUN opts specification
    (233) fun_block -> . FUNCTION opts specification
    (44) lemma_block -> . LEMMA ID COLON assumes_block shows_clause lemma_proof_block
    (174) locale_block -> . LOCALE ID
    (175) locale_block -> . LOCALE ID BEGIN content END
    (176) locale_block -> . LOCALE ID comment_block BEGIN content END
    (177) locale_block -> . LOCALE ID EQ locale
    (178) locale_block -> . LOCALE ID EQ locale BEGIN content END
    (21) method_block -> . METHOD method_name EQUALS instruction
    (243) section_block -> . SECTION CARTOUCHE
    (244) text_block -> . TEXT CARTOUCHE
    (211) type_synonym -> . TYPE_SYNONYM typespec EQUALS ID
    (212) type_synonym -> . TYPE_SYNONYM typespec EQUALS ID mixfix
    (209) typedecl -> . TYPEDECL typespec
    (210) typedecl -> . TYPEDECL typespec mixfix

    END             reduce using rule 253 (empty -> .)
    AXIOMATIZATION  shift and go to state 32
    FUN             shift and go to state 33
    FUNCTION        shift and go to state 34
    LEMMA           shift and go to state 35
    LOCALE          shift and go to state 36
    METHOD          shift and go to state 37
    SECTION         shift and go to state 6
    TEXT            shift and go to state 7
    TYPE_SYNONYM    shift and go to state 38
    TYPEDECL        shift and go to state 39

    content                        shift and go to state 20
    statement                      shift and go to state 21
    empty                          shift and go to state 22
    axiomatization_block           shift and go to state 23
    fun_block                      shift and go to state 24
    lemma_block                    shift and go to state 25
    locale_block                   shift and go to state 26
    method_block                   shift and go to state 27
    section_block                  shift and go to state 28
    text_block                     shift and go to state 29
    type_synonym                   shift and go to state 30
    typedecl                       shift and go to state 31

state 17

    (5) imports_opt -> IMPORTS import_list .

    BEGIN           reduce using rule 5 (imports_opt -> IMPORTS import_list .)


state 18

    (7) import_list -> ID . import_list
    (9) import_list -> ID .
    (7) import_list -> . ID import_list
    (8) import_list -> . QUOTED_STRING import_list
    (9) import_list -> . ID

    BEGIN           reduce using rule 9 (import_list -> ID .)
    ID              shift and go to state 18
    QUOTED_STRING   shift and go to state 19

    import_list                    shift and go to state 40

state 19

    (8) import_list -> QUOTED_STRING . import_list
    (7) import_list -> . ID import_list
    (8) import_list -> . QUOTED_STRING import_list
    (9) import_list -> . ID

    ID              shift and go to state 18
    QUOTED_STRING   shift and go to state 19

    import_list                    shift and go to state 41

state 20

    (4) theory -> THEORY ID imports_opt BEGIN content . END

    END             shift and go to state 42


state 21

    (10) content -> statement . content
    (10) content -> . statement content
    (11) content -> . empty
    (12) statement -> . axiomatization_block
    (13) statement -> . fun_block
    (14) statement -> . lemma_block
    (15) statement -> . locale_block
    (16) statement -> . method_block
    (17) statement -> . section_block
    (18) statement -> . text_block
    (19) statement -> . type_synonym
    (20) statement -> . typedecl
    (253) empty -> .
    (142) axiomatization_block -> . AXIOMATIZATION
    (143) axiomatization_block -> . AXIOMATIZATION vars
    (144) axiomatization_block -> . AXIOMATIZATION WHERE axiomatization
    (145) axiomatization_block -> . AXIOMATIZATION vars WHERE axiomatization
    (230) fun_block -> . FUN specification
    (231) fun_block -> . FUNCTION specification
    (232) fun_block -> . FUN opts specification
    (233) fun_block -> . FUNCTION opts specification
    (44) lemma_block -> . LEMMA ID COLON assumes_block shows_clause lemma_proof_block
    (174) locale_block -> . LOCALE ID
    (175) locale_block -> . LOCALE ID BEGIN content END
    (176) locale_block -> . LOCALE ID comment_block BEGIN content END
    (177) locale_block -> . LOCALE ID EQ locale
    (178) locale_block -> . LOCALE ID EQ locale BEGIN content END
    (21) method_block -> . METHOD method_name EQUALS instruction
    (243) section_block -> . SECTION CARTOUCHE
    (244) text_block -> . TEXT CARTOUCHE
    (211) type_synonym -> . TYPE_SYNONYM typespec EQUALS ID
    (212) type_synonym -> . TYPE_SYNONYM typespec EQUALS ID mixfix
    (209) typedecl -> . TYPEDECL typespec
    (210) typedecl -> . TYPEDECL typespec mixfix

    END             reduce using rule 253 (empty -> .)
    AXIOMATIZATION  shift and go to state 32
    FUN             shift and go to state 33
    FUNCTION        shift and go to state 34
    LEMMA           shift and go to state 35
    LOCALE          shift and go to state 36
    METHOD          shift and go to state 37
    SECTION         shift and go to state 6
    TEXT            shift and go to state 7
    TYPE_SYNONYM    shift and go to state 38
    TYPEDECL        shift and go to state 39

    statement                      shift and go to state 21
    content                        shift and go to state 43
    empty                          shift and go to state 22
    axiomatization_block           shift and go to state 23
    fun_block                      shift and go to state 24
    lemma_block                    shift and go to state 25
    locale_block                   shift and go to state 26
    method_block                   shift and go to state 27
    section_block                  shift and go to state 28
    text_block                     shift and go to state 29
    type_synonym                   shift and go to state 30
    typedecl                       shift and go to state 31

state 22

    (11) content -> empty .

    END             reduce using rule 11 (content -> empty .)


state 23

    (12) statement -> axiomatization_block .

    AXIOMATIZATION  reduce using rule 12 (statement -> axiomatization_block .)
    FUN             reduce using rule 12 (statement -> axiomatization_block .)
    FUNCTION        reduce using rule 12 (statement -> axiomatization_block .)
    LEMMA           reduce using rule 12 (statement -> axiomatization_block .)
    LOCALE          reduce using rule 12 (statement -> axiomatization_block .)
    METHOD          reduce using rule 12 (statement -> axiomatization_block .)
    SECTION         reduce using rule 12 (statement -> axiomatization_block .)
    TEXT            reduce using rule 12 (statement -> axiomatization_block .)
    TYPE_SYNONYM    reduce using rule 12 (statement -> axiomatization_block .)
    TYPEDECL        reduce using rule 12 (statement -> axiomatization_block .)
    END             reduce using rule 12 (statement -> axiomatization_block .)


state 24

    (13) statement -> fun_block .

    AXIOMATIZATION  reduce using rule 13 (statement -> fun_block .)
    FUN             reduce using rule 13 (statement -> fun_block .)
    FUNCTION        reduce using rule 13 (statement -> fun_block .)
    LEMMA           reduce using rule 13 (statement -> fun_block .)
    LOCALE          reduce using rule 13 (statement -> fun_block .)
    METHOD          reduce using rule 13 (statement -> fun_block .)
    SECTION         reduce using rule 13 (statement -> fun_block .)
    TEXT            reduce using rule 13 (statement -> fun_block .)
    TYPE_SYNONYM    reduce using rule 13 (statement -> fun_block .)
    TYPEDECL        reduce using rule 13 (statement -> fun_block .)
    END             reduce using rule 13 (statement -> fun_block .)


state 25

    (14) statement -> lemma_block .

    AXIOMATIZATION  reduce using rule 14 (statement -> lemma_block .)
    FUN             reduce using rule 14 (statement -> lemma_block .)
    FUNCTION        reduce using rule 14 (statement -> lemma_block .)
    LEMMA           reduce using rule 14 (statement -> lemma_block .)
    LOCALE          reduce using rule 14 (statement -> lemma_block .)
    METHOD          reduce using rule 14 (statement -> lemma_block .)
    SECTION         reduce using rule 14 (statement -> lemma_block .)
    TEXT            reduce using rule 14 (statement -> lemma_block .)
    TYPE_SYNONYM    reduce using rule 14 (statement -> lemma_block .)
    TYPEDECL        reduce using rule 14 (statement -> lemma_block .)
    END             reduce using rule 14 (statement -> lemma_block .)


state 26

    (15) statement -> locale_block .
